--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,12 @@
+<!--
+ * @Author: 朱小龙
+ * @Date: 2024-03-20 11:36:56
+ * @LastEditTime: 2024-03-21 11:18:15
+ * @LastEditors: 朱小龙
+ * @Description: 
+ * @FilePath: \my-app\public\index.html
+ * 可以输入预定的版权声明、个性签名、空行等
+-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -24,7 +33,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>我的React项目</title>
+    <link rel="stylesheet" href="./css//reset.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
